--- a/backend/package.json
+++ b/backend/package.json
@@ -17,5 +17,9 @@
     "mongoose": "^6.10.0",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20"
+  },
+  "devDependencies": {
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.1"
   }
 }
